@@ -142,8 +142,14 @@ span.searchalttitle {
 
 div.searchdidyoumean {
 	font-size: 127%;
-	padding-bottom:1ex;
-	padding-top:1ex; 
+	margin-bottom: 1ex;
+	margin-top: 1ex;
+	/* Note that this color won't affect the link, as desired. */
+	color: #c00;
+}
+
+div.searchdidyoumean em {
+	font-weight: bold;
 }
 
 .searchmatch {
